tenantcontrolplanes/tenants-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-133
---
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-134
